Fase 4/Fase4ConstanzaPedro/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TkErrorSol
    TkLlaveCierra
    TkLlaveAbre
    TkError
    TkCarEspecial
    TkCarError
    TkCaracterError

Grammar

Rule 0     S' -> bloque
Rule 1     bloque -> TkBegin cuerpo TkEnd
Rule 2     bloque -> TkWith declaracion TkBegin cuerpo TkEnd
Rule 3     declaracion -> TkVar variables TkDosPuntos TkInt
Rule 4     declaracion -> TkVar variables TkDosPuntos TkBool
Rule 5     declaracion -> TkVar variables TkDosPuntos TkChar
Rule 6     declaracion -> TkVar variables TkDosPuntos arreglo
Rule 7     declaracion -> TkVar variables TkDosPuntos TkInt declaracion
Rule 8     declaracion -> TkVar variables TkDosPuntos TkBool declaracion
Rule 9     declaracion -> TkVar variables TkDosPuntos TkChar declaracion
Rule 10    declaracion -> TkVar variables TkDosPuntos arreglo declaracion
Rule 11    arreglo -> TkArray TkCorcheteAbre terminal TkCorcheteCierra TkOf TkChar
Rule 12    arreglo -> TkArray TkCorcheteAbre terminal TkCorcheteCierra TkOf TkInt
Rule 13    arreglo -> TkArray TkCorcheteAbre terminal TkCorcheteCierra TkOf TkBool
Rule 14    arreglo -> TkArray TkCorcheteAbre terminal TkCorcheteCierra TkOf arreglo
Rule 15    arreglo -> TkArray TkCorcheteAbre opAritm TkCorcheteCierra TkOf TkChar
Rule 16    arreglo -> TkArray TkCorcheteAbre opAritm TkCorcheteCierra TkOf TkInt
Rule 17    arreglo -> TkArray TkCorcheteAbre opAritm TkCorcheteCierra TkOf TkBool
Rule 18    arreglo -> TkArray TkCorcheteAbre opAritm TkCorcheteCierra TkOf arreglo
Rule 19    arreglo -> TkArray TkCorcheteAbre indice TkCorcheteCierra TkOf TkChar
Rule 20    arreglo -> TkArray TkCorcheteAbre indice TkCorcheteCierra TkOf TkInt
Rule 21    arreglo -> TkArray TkCorcheteAbre indice TkCorcheteCierra TkOf TkBool
Rule 22    arreglo -> TkArray TkCorcheteAbre indice TkCorcheteCierra TkOf arreglo
Rule 23    terminal -> TkId
Rule 24    terminal -> TkCaracter
Rule 25    terminal -> TkNum
Rule 26    terminal -> TkTrue
Rule 27    terminal -> TkFalse
Rule 28    terminal -> TkTab
Rule 29    terminal -> TkSalto
Rule 30    terminal -> TkComilla
Rule 31    terminal -> TkBarra
Rule 32    terminal -> TkParAbre terminal TkParCierra
Rule 33    cuerpo -> instruccion
Rule 34    cuerpo -> instruccion cuerpo
Rule 35    cuerpo -> bloque cuerpo
Rule 36    cuerpo -> bloque
Rule 37    instruccion -> expresion TkPuntoYComa
Rule 38    instruccion -> condicional
Rule 39    instruccion -> iterDeter
Rule 40    instruccion -> iterInd
Rule 41    instruccion -> asignacion TkPuntoYComa
Rule 42    instruccion -> input TkPuntoYComa
Rule 43    instruccion -> output TkPuntoYComa
Rule 44    condicional -> TkIf expresion TkHacer cuerpo TkEnd
Rule 45    condicional -> TkIf expresion TkHacer cuerpo TkOtherwise TkHacer cuerpo TkEnd
Rule 46    asignacion -> TkId TkAsignacion expresion
Rule 47    asignacion -> indice TkAsignacion expresion
Rule 48    indice -> TkId TkCorcheteAbre terminal TkCorcheteCierra
Rule 49    indice -> TkId TkCorcheteAbre opAritm TkCorcheteCierra
Rule 50    indice -> TkId TkCorcheteAbre indice TkCorcheteCierra
Rule 51    indice -> opArr TkCorcheteAbre terminal TkCorcheteCierra
Rule 52    indice -> opArr TkCorcheteAbre opAritm TkCorcheteCierra
Rule 53    indice -> opArr TkCorcheteAbre indice TkCorcheteCierra
Rule 54    input -> TkRead TkId
Rule 55    output -> TkPrint expresion
Rule 56    iterInd -> TkWhile expresion TkHacer cuerpo TkEnd
Rule 57    iterDeter -> TkFor TkId TkFrom opAritm TkTo opAritm TkStep opAritm TkHacer cuerpo TkEnd
Rule 58    iterDeter -> TkFor TkId TkFrom opAritm TkTo terminal TkStep opAritm TkHacer cuerpo TkEnd
Rule 59    iterDeter -> TkFor TkId TkFrom terminal TkTo opAritm TkStep opAritm TkHacer cuerpo TkEnd
Rule 60    iterDeter -> TkFor TkId TkFrom terminal TkTo terminal TkStep opAritm TkHacer cuerpo TkEnd
Rule 61    iterDeter -> TkFor TkId TkFrom opAritm TkTo opAritm TkStep terminal TkHacer cuerpo TkEnd
Rule 62    iterDeter -> TkFor TkId TkFrom opAritm TkTo terminal TkStep terminal TkHacer cuerpo TkEnd
Rule 63    iterDeter -> TkFor TkId TkFrom terminal TkTo opAritm TkStep terminal TkHacer cuerpo TkEnd
Rule 64    iterDeter -> TkFor TkId TkFrom terminal TkTo terminal TkStep terminal TkHacer cuerpo TkEnd
Rule 65    iterDeter -> TkFor TkId TkFrom opAritm TkTo opAritm TkHacer cuerpo TkEnd
Rule 66    iterDeter -> TkFor TkId TkFrom opAritm TkTo terminal TkHacer cuerpo TkEnd
Rule 67    iterDeter -> TkFor TkId TkFrom terminal TkTo opAritm TkHacer cuerpo TkEnd
Rule 68    iterDeter -> TkFor TkId TkFrom terminal TkTo terminal TkHacer cuerpo TkEnd
Rule 69    expresion -> opAritm
Rule 70    expresion -> terminal
Rule 71    expresion -> opRel
Rule 72    expresion -> opCar
Rule 73    expresion -> opBool
Rule 74    expresion -> indice
Rule 75    expresion -> opArr
Rule 76    opAritm -> expresion TkResta expresion
Rule 77    opAritm -> expresion TkSuma expresion
Rule 78    opAritm -> expresion TkDiv expresion
Rule 79    opAritm -> expresion TkMult expresion
Rule 80    opAritm -> expresion TkMod expresion
Rule 81    opAritm -> expresion TkPunto expresion
Rule 82    opAritm -> TkParAbre expresion TkResta expresion TkParCierra
Rule 83    opAritm -> TkParAbre expresion TkSuma expresion TkParCierra
Rule 84    opAritm -> TkParAbre expresion TkDiv expresion TkParCierra
Rule 85    opAritm -> TkParAbre expresion TkMult expresion TkParCierra
Rule 86    opAritm -> TkParAbre expresion TkMod expresion TkParCierra
Rule 87    opAritm -> TkParAbre expresion TkPunto expresion TkParCierra
Rule 88    opAritm -> TkResta expresion
Rule 89    opAritm -> TkParAbre TkResta expresion TkParCierra
Rule 90    opArr -> TkId TkConcatenacion TkId
Rule 91    opArr -> TkParAbre TkId TkConcatenacion TkId TkParCierra
Rule 92    opArr -> TkShift TkId
Rule 93    opArr -> TkParAbre TkShift TkId TkParCierra
Rule 94    opCar -> terminal TkSiguienteCar
Rule 95    opCar -> terminal TkAnteriorCar
Rule 96    opCar -> TkValorAscii terminal
Rule 97    opCar -> TkValorAscii terminal TkSiguienteCar
Rule 98    opCar -> TkValorAscii terminal TkAnteriorCar
Rule 99    opCar -> indice TkSiguienteCar
Rule 100   opCar -> indice TkAnteriorCar
Rule 101   opCar -> TkValorAscii indice
Rule 102   opCar -> TkValorAscii indice TkSiguienteCar
Rule 103   opCar -> TkValorAscii indice TkAnteriorCar
Rule 104   opRel -> expresion TkMayor expresion
Rule 105   opRel -> expresion TkMenor expresion
Rule 106   opRel -> expresion TkMayorIgual expresion
Rule 107   opRel -> expresion TkMenorIgual expresion
Rule 108   opRel -> expresion TkIgual expresion
Rule 109   opRel -> expresion TkDesigual expresion
Rule 110   opRel -> TkParAbre expresion TkMayor expresion TkParCierra
Rule 111   opRel -> TkParAbre expresion TkMenor expresion TkParCierra
Rule 112   opRel -> TkParAbre expresion TkMayorIgual expresion TkParCierra
Rule 113   opRel -> TkParAbre expresion TkMenorIgual expresion TkParCierra
Rule 114   opRel -> TkParAbre expresion TkIgual expresion TkParCierra
Rule 115   opRel -> TkParAbre expresion TkDesigual expresion TkParCierra
Rule 116   variables -> TkId TkComa variables
Rule 117   variables -> TkId TkAsignacion expresion TkComa variables
Rule 118   variables -> TkId
Rule 119   variables -> TkId TkAsignacion expresion
Rule 120   opBool -> expresion TkConjuncion expresion
Rule 121   opBool -> expresion TkDisyuncion expresion
Rule 122   opBool -> TkParAbre expresion TkConjuncion expresion TkParCierra
Rule 123   opBool -> TkParAbre expresion TkDisyuncion expresion TkParCierra
Rule 124   opBool -> TkNot expresion
Rule 125   opBool -> TkParAbre TkNot expresion TkParCierra

Terminals, with rules where they appear

TkAnteriorCar        : 95 98 100 103
TkArray              : 11 12 13 14 15 16 17 18 19 20 21 22
TkAsignacion         : 46 47 117 119
TkBarra              : 31
TkBegin              : 1 2
TkBool               : 4 8 13 17 21
TkCarError           : 
TkCarEspecial        : 
TkCaracter           : 24
TkCaracterError      : 
TkChar               : 5 9 11 15 19
TkComa               : 116 117
TkComilla            : 30
TkConcatenacion      : 90 91
TkConjuncion         : 120 122
TkCorcheteAbre       : 11 12 13 14 15 16 17 18 19 20 21 22 48 49 50 51 52 53
TkCorcheteCierra     : 11 12 13 14 15 16 17 18 19 20 21 22 48 49 50 51 52 53
TkDesigual           : 109 115
TkDisyuncion         : 121 123
TkDiv                : 78 84
TkDosPuntos          : 3 4 5 6 7 8 9 10
TkEnd                : 1 2 44 45 56 57 58 59 60 61 62 63 64 65 66 67 68
TkError              : 
TkErrorSol           : 
TkFalse              : 27
TkFor                : 57 58 59 60 61 62 63 64 65 66 67 68
TkFrom               : 57 58 59 60 61 62 63 64 65 66 67 68
TkHacer              : 44 45 45 56 57 58 59 60 61 62 63 64 65 66 67 68
TkId                 : 23 46 48 49 50 54 57 58 59 60 61 62 63 64 65 66 67 68 90 90 91 91 92 93 116 117 118 119
TkIf                 : 44 45
TkIgual              : 108 114
TkInt                : 3 7 12 16 20
TkLlaveAbre          : 
TkLlaveCierra        : 
TkMayor              : 104 110
TkMayorIgual         : 106 112
TkMenor              : 105 111
TkMenorIgual         : 107 113
TkMod                : 80 86
TkMult               : 79 85
TkNot                : 124 125
TkNum                : 25
TkOf                 : 11 12 13 14 15 16 17 18 19 20 21 22
TkOtherwise          : 45
TkParAbre            : 32 82 83 84 85 86 87 89 91 93 110 111 112 113 114 115 122 123 125
TkParCierra          : 32 82 83 84 85 86 87 89 91 93 110 111 112 113 114 115 122 123 125
TkPrint              : 55
TkPunto              : 81 87
TkPuntoYComa         : 37 41 42 43
TkRead               : 54
TkResta              : 76 82 88 89
TkSalto              : 29
TkShift              : 92 93
TkSiguienteCar       : 94 97 99 102
TkStep               : 57 58 59 60 61 62 63 64
TkSuma               : 77 83
TkTab                : 28
TkTo                 : 57 58 59 60 61 62 63 64 65 66 67 68
TkTrue               : 26
TkValorAscii         : 96 97 98 101 102 103
TkVar                : 3 4 5 6 7 8 9 10
TkWhile              : 56
TkWith               : 2
error                : 

Nonterminals, with rules where they appear

arreglo              : 6 10 14 18 22
asignacion           : 41
bloque               : 35 36 0
condicional          : 38
cuerpo               : 1 2 34 35 44 45 45 56 57 58 59 60 61 62 63 64 65 66 67 68
declaracion          : 2 7 8 9 10
expresion            : 37 44 45 46 47 55 56 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 89 104 104 105 105 106 106 107 107 108 108 109 109 110 110 111 111 112 112 113 113 114 114 115 115 117 119 120 120 121 121 122 122 123 123 124 125
indice               : 19 20 21 22 47 50 53 74 99 100 101 102 103
input                : 42
instruccion          : 33 34
iterDeter            : 39
iterInd              : 40
opAritm              : 15 16 17 18 49 52 57 57 57 58 58 59 59 60 61 61 62 63 65 65 66 67 69
opArr                : 51 52 53 75
opBool               : 73
opCar                : 72
opRel                : 71
output               : 43
terminal             : 11 12 13 14 32 48 51 58 59 60 60 61 62 62 63 63 64 64 64 66 67 68 68 70 94 95 96 97 98
variables            : 3 4 5 6 7 8 9 10 116 117

Parsing method: LALR

state 0

    (0) S' -> . bloque
    (1) bloque -> . TkBegin cuerpo TkEnd
    (2) bloque -> . TkWith declaracion TkBegin cuerpo TkEnd

    TkBegin         shift and go to state 1
    TkWith          shift and go to state 2

    bloque                         shift and go to state 3

state 1

    (1) bloque -> TkBegin . cuerpo TkEnd
    (33) cuerpo -> . instruccion
    (34) cuerpo -> . instruccion cuerpo
    (35) cuerpo -> . bloque cuerpo
    (36) cuerpo -> . bloque
    (37) instruccion -> . expresion TkPuntoYComa
    (38) instruccion -> . condicional
    (39) instruccion -> . iterDeter
    (40) instruccion -> . iterInd
    (41) instruccion -> . asignacion TkPuntoYComa
    (42) instruccion -> . input TkPuntoYComa
    (43) instruccion -> . output TkPuntoYComa
    (1) bloque -> . TkBegin cuerpo TkEnd
    (2) bloque -> . TkWith declaracion TkBegin cuerpo TkEnd
    (69) expresion -> . opAritm
    (70) expresion -> . terminal
    (71) expresion -> . opRel
    (72) expresion -> . opCar
    (73) expresion -> . opBool
    (74) expresion -> . indice
    (75) expresion -> . opArr
    (44) condicional -> . TkIf expresion TkHacer cuerpo TkEnd
    (45) condicional -> . TkIf expresion TkHacer cuerpo TkOtherwise TkHacer cuerpo TkEnd
    (57) iterDeter -> . TkFor TkId TkFrom opAritm TkTo opAritm TkStep opAritm TkHacer cuerpo TkEnd
    (58) iterDeter -> . TkFor TkId TkFrom opAritm TkTo terminal TkStep opAritm TkHacer cuerpo TkEnd
    (59) iterDeter -> . TkFor TkId TkFrom terminal TkTo opAritm TkStep opAritm TkHacer cuerpo TkEnd
    (60) iterDeter -> . TkFor TkId TkFrom terminal TkTo terminal TkStep opAritm TkHacer cuerpo TkEnd
    (61) iterDeter -> . TkFor TkId TkFrom opAritm TkTo opAritm TkStep terminal TkHacer cuerpo TkEnd
    (62) iterDeter -> . TkFor TkId TkFrom opAritm TkTo terminal TkStep terminal TkHacer cuerpo TkEnd
    (63) iterDeter -> . TkFor TkId TkFrom terminal TkTo opAritm TkStep terminal TkHacer cuerpo TkEnd
    (64) iterDeter -> . TkFor TkId TkFrom terminal TkTo terminal TkStep terminal TkHacer cuerpo TkEnd
    (65) iterDeter -> . TkFor TkId TkFrom opAritm TkTo opAritm TkHacer cuerpo TkEnd
    (66) iterDeter -> . TkFor TkId TkFrom opAritm TkTo terminal TkHacer cuerpo TkEnd
    (67) iterDeter -> . TkFor TkId TkFrom terminal TkTo opAritm TkHacer cuerpo TkEnd
    (68) iterDeter -> . TkFor TkId TkFrom terminal TkTo terminal TkHacer cuerpo TkEnd
    (56) iterInd -> . TkWhile expresion TkHacer cuerpo TkEnd
    (46) asignacion -> . TkId TkAsignacion expresion
    (47) asignacion -> . indice TkAsignacion expresion
    (54) input -> . TkRead TkId
    (55) output -> . TkPrint expresion
    (76) opAritm -> . expresion TkResta expresion
    (77) opAritm -> . expresion TkSuma expresion
    (78) opAritm -> . expresion TkDiv expresion
    (79) opAritm -> . expresion TkMult expresion
    (80) opAritm -> . expresion TkMod expresion
    (81) opAritm -> . expresion TkPunto expresion
    (82) opAritm -> . TkParAbre expresion TkResta expresion TkParCierra
    (83) opAritm -> . TkParAbre expresion TkSuma expresion TkParCierra
    (84) opAritm -> . TkParAbre expresion TkDiv expresion TkParCierra
    (85) opAritm -> . TkParAbre expresion TkMult expresion TkParCierra
    (86) opAritm -> . TkParAbre expresion TkMod expresion TkParCierra
    (87) opAritm -> . TkParAbre expresion TkPunto expresion TkParCierra
    (88) opAritm -> . TkResta expresion
    (89) opAritm -> . TkParAbre TkResta expresion TkParCierra
    (23) terminal -> . TkId
    (24) terminal -> . TkCaracter
    (25) terminal -> . TkNum
    (26) terminal -> . TkTrue
    (27) terminal -> . TkFalse
    (28) terminal -> . TkTab
    (29) terminal -> . TkSalto
    (30) terminal -> . TkComilla
    (31) terminal -> . TkBarra
    (32) terminal -> . TkParAbre terminal TkParCierra
    (104) opRel -> . expresion TkMayor expresion
    (105) opRel -> . expresion TkMenor expresion
    (106) opRel -> . expresion TkMayorIgual expresion
    (107) opRel -> . expresion TkMenorIgual expresion
    (108) opRel -> . expresion TkIgual expresion
    (109) opRel -> . expresion TkDesigual expresion
    (110) opRel -> . TkParAbre expresion TkMayor expresion TkParCierra
    (111) opRel -> . TkParAbre expresion TkMenor expresion TkParCierra
    (112) opRel -> . TkParAbre expresion TkMayorIgual expresion TkParCierra
    (113) opRel -> . TkParAbre expresion TkMenorIgual expresion TkParCierra
    (114) opRel -> . TkParAbre expresion TkIgual expresion TkParCierra
    (115) opRel -> . TkParAbre expresion TkDesigual expresion TkParCierra
    (94) opCar -> . terminal TkSiguienteCar
    (95) opCar -> . terminal TkAnteriorCar
    (96) opCar -> . TkValorAscii terminal
    (97) opCar -> . TkValorAscii terminal TkSiguienteCar
    (98) opCar -> . TkValorAscii terminal TkAnteriorCar
    (99) opCar -> . indice TkSiguienteCar
    (100) opCar -> . indice TkAnteriorCar
    (101) opCar -> . TkValorAscii indice
    (102) opCar -> . TkValorAscii indice TkSiguienteCar
    (103) opCar -> . TkValorAscii indice TkAnteriorCar
    (120) opBool -> . expresion TkConjuncion expresion
    (121) opBool -> . expresion TkDisyuncion expresion
    (122) opBool -> . TkParAbre expresion TkConjuncion expresion TkParCierra
    (123) opBool -> . TkParAbre expresion TkDisyuncion expresion TkParCierra
    (124) opBool -> . TkNot expresion
    (125) opBool -> . TkParAbre TkNot expresion TkParCierra
    (48) indice -> . TkId TkCorcheteAbre terminal TkCorcheteCierra
    (49) indice -> . TkId TkCorcheteAbre opAritm TkCorcheteCierra
    (50) indice -> . TkId TkCorcheteAbre indice TkCorcheteCierra
    (51) indice -> . opArr TkCorcheteAbre terminal TkCorcheteCierra
    (52) indice -> . opArr TkCorcheteAbre opAritm TkCorcheteCierra
    (53) indice -> . opArr TkCorcheteAbre indice TkCorcheteCierra
    (90) opArr -> . TkId TkConcatenacion TkId
    (91) opArr -> . TkParAbre TkId TkConcatenacion TkId TkParCierra
    (92) opArr -> . TkShift TkId
    (93) opArr -> . TkParAbre TkShift TkId TkParCierra

    TkBegin         shift and go to state 1
    TkWith          shift and go to state 2
    TkIf            shift and go to state 5
    TkFor           shift and go to state 12
    TkWhile         shift and go to state 39
    TkId            shift and go to state 8
    TkRead          shift and go to state 13
    TkPrint         shift and go to state 7
    TkParAbre       shift and go to state 38
    TkResta         shift and go to state 23
    TkCaracter      shift and go to state 31
    TkNum           shift and go to state 25
    TkTrue          shift and go to state 20
    TkFalse         shift and go to state 29
    TkTab           shift and go to state 16
    TkSalto         shift and go to state 28
    TkComilla       shift and go to state 32
    TkBarra         shift and go to state 18
    TkValorAscii    shift and go to state 15
    TkNot           shift and go to state 19
    TkShift         shift and go to state 21

    iterInd                        shift and go to state 4
    cuerpo                         shift and go to state 22
    expresion                      shift and go to state 6
    opAritm                        shift and go to state 24
    opArr                          shift and go to state 26
    iterDeter                      shift and go to state 27
    indice                         shift and go to state 34
    input                          shift and go to state 35
    opRel                          shift and go to state 30
    condicional                    shift and go to state 17
    terminal                       shift and go to state 36
    opBool                         shift and go to state 37
    bloque                         shift and go to state 11
    instruccion                    shift and go to state 9
    opCar                          shift and go to state 10
    asignacion                     shift and go to state 14
    output                         shift and go to state 33

state 2

    (2) bloque -> TkWith . declaracion TkBegin cuerpo TkEnd
    (3) declaracion -> . TkVar variables TkDosPuntos TkInt
    (4) declaracion -> . TkVar variables TkDosPuntos TkBool
    (5) declaracion -> . TkVar variables TkDosPuntos TkChar
    (6) declaracion -> . TkVar variables TkDosPuntos arreglo
    (7) declaracion -> . TkVar variables TkDosPuntos TkInt declaracion
    (8) declaracion -> . TkVar variables TkDosPuntos TkBool declaracion
    (9) declaracion -> . TkVar variables TkDosPuntos TkChar declaracion
    (10) declaracion -> . TkVar variables TkDosPuntos arreglo declaracion

    TkVar           shift and go to state 41

    declaracion                    shift and go to state 40

state 3

    (0) S' -> bloque .



state 4

    (40) instruccion -> iterInd .

    TkBegin         reduce using rule 40 (instruccion -> iterInd .)
    TkWith          reduce using rule 40 (instruccion -> iterInd .)
    TkIf            reduce using rule 40 (instruccion -> iterInd .)
    TkFor           reduce using rule 40 (instruccion -> iterInd .)
    TkWhile         reduce using rule 40 (instruccion -> iterInd .)
    TkId            reduce using rule 40 (instruccion -> iterInd .)
    TkRead          reduce using rule 40 (instruccion -> iterInd .)
    TkPrint         reduce using rule 40 (instruccion -> iterInd .)
    TkParAbre       reduce using rule 40 (instruccion -> iterInd .)
    TkResta         reduce using rule 40 (instruccion -> iterInd .)
    TkCaracter      reduce using rule 40 (instruccion -> iterInd .)
    TkNum           reduce using rule 40 (instruccion -> iterInd .)
    TkTrue          reduce using rule 40 (instruccion -> iterInd .)
    TkFalse         reduce using rule 40 (instruccion -> iterInd .)
    TkTab           reduce using rule 40 (instruccion -> iterInd .)
    TkSalto         reduce using rule 40 (instruccion -> iterInd .)
    TkComilla       reduce using rule 40 (instruccion -> iterInd .)
    TkBarra         reduce using rule 40 (instruccion -> iterInd .)
    TkValorAscii    reduce using rule 40 (instruccion -> iterInd .)
    TkNot           reduce using rule 40 (instruccion -> iterInd .)
    TkShift         reduce using rule 40 (instruccion -> iterInd .)
    TkEnd           reduce using rule 40 (instruccion -> iterInd .)
    TkOtherwise     reduce using rule 40 (instruccion -> iterInd .)


state 5

    (44) condicional -> TkIf . expresion TkHacer cuerpo TkEnd
    (45) condicional -> TkIf . expresion TkHacer cuerpo TkOtherwise TkHacer cuerpo TkEnd
    (69) expresion -> . opAritm
    (70) expresion -> . terminal
    (71) expresion -> . opRel
    (72) expresion -> . opCar
    (73) expresion -> . opBool
    (74) expresion -> . indice
    (75) expresion -> . opArr
    (76) opAritm -> . expresion TkResta expresion
    (77) opAritm -> . expresion TkSuma expresion
    (78) opAritm -> . expresion TkDiv expresion
    (79) opAritm -> . expresion TkMult expresion
    (80) opAritm -> . expresion TkMod expresion
    (81) opAritm -> . expresion TkPunto expresion
    (82) opAritm -> . TkParAbre expresion TkResta expresion TkParCierra
    (83) opAritm -> . TkParAbre expresion TkSuma expresion TkParCierra
    (84) opAritm -> . TkParAbre expresion TkDiv expresion TkParCierra
    (85) opAritm -> . TkParAbre expresion TkMult expresion TkParCierra
    (86) opAritm -> . TkParAbre expresion TkMod expresion TkParCierra
    (87) opAritm -> . TkParAbre expresion TkPunto expresion TkParCierra
    (88) opAritm -> . TkResta expresion
    (89) opAritm -> . TkParAbre TkResta expresion TkParCierra
    (23) terminal -> . TkId
    (24) terminal -> . TkCaracter
    (25) terminal -> . TkNum
    (26) terminal -> . TkTrue
    (27) terminal -> . TkFalse
    (28) terminal -> . TkTab
    (29) terminal -> . TkSalto
    (30) terminal -> . TkComilla
    (31) terminal -> . TkBarra
    (32) terminal -> . TkParAbre terminal TkParCierra
    (104) opRel -> . expresion TkMayor expresion
    (105) opRel -> . expresion TkMenor expresion
    (106) opRel -> . expresion TkMayorIgual expresion
    (107) opRel -> . expresion TkMenorIgual expresion
    (108) opRel -> . expresion TkIgual expresion
    (109) opRel -> . expresion TkDesigual expresion
    (110) opRel -> . TkParAbre expresion TkMayor expresion TkParCierra
    (111) opRel -> . TkParAbre expresion TkMenor expresion TkParCierra
    (112) opRel -> . TkParAbre expresion TkMayorIgual expresion TkParCierra
    (113) opRel -> . TkParAbre expresion TkMenorIgual expresion TkParCierra
    (114) opRel -> . TkParAbre expresion TkIgual expresion TkParCierra
    (115) opRel -> . TkParAbre expresion TkDesigual expresion TkParCierra
    (94) opCar -> . terminal TkSiguienteCar
    (95) opCar -> . terminal TkAnteriorCar
    (96) opCar -> . TkValorAscii terminal
    (97) opCar -> . TkValorAscii terminal TkSiguienteCar
    (98) opCar -> . TkValorAscii terminal TkAnteriorCar
    (99) opCar -> . indice TkSiguienteCar
    (100) opCar -> . indice TkAnteriorCar
    (101) opCar -> . TkValorAscii indice
    (102) opCar -> . TkValorAscii indice TkSiguienteCar
    (103) opCar -> . TkValorAscii indice TkAnteriorCar
    (120) opBool -> . expresion TkConjuncion expresion
    (121) opBool -> . expresion TkDisyuncion expresion
    (122) opBool -> . TkParAbre expresion TkConjuncion expresion TkParCierra
    (123) opBool -> . TkParAbre expresion TkDisyuncion expresion TkParCierra
    (124) opBool -> . TkNot expresion
    (125) opBool -> . TkParAbre TkNot expresion TkParCierra
    (48) indice -> . TkId TkCorcheteAbre terminal TkCorcheteCierra
    (49) indice -> . TkId TkCorcheteAbre opAritm TkCorcheteCierra
    (50) indice -> . TkId TkCorcheteAbre indice TkCorcheteCierra
    (51) indice -> . opArr TkCorcheteAbre terminal TkCorcheteCierra
    (52) indice -> . opArr TkCorcheteAbre opAritm TkCorcheteCierra
    (53) indice -> . opArr TkCorcheteAbre indice TkCorcheteCierra
    (90) opArr -> . TkId TkConcatenacion TkId
    (91) opArr -> . TkParAbre TkId TkConcatenacion TkId TkParCierra
    (92) opArr -> . TkShift TkId
    (93) opArr -> . TkParAbre TkShift TkId TkParCierra

    TkParAbre       shift and go to state 38
    TkResta         shift and go to state 23
    TkId            shift and go to state 43
    TkCaracter      shift and go to state 31
    TkNum           shift and go to state 25
    TkTrue          shift and go to state 20
    TkFalse         shift and go to state 29
    TkTab           shift and go to state 16
    TkSalto         shift and go to state 28
    TkComilla       shift and go to state 32
    TkBarra         shift and go to state 18
    TkValorAscii    shift and go to state 15
    TkNot           shift and go to state 19
    TkShift         shift and go to state 21

    expresion                      shift and go to state 42
    indice                         shift and go to state 44
    opAritm                        shift and go to state 24
    opArr                          shift and go to state 26
    opBool                         shift and go to state 37
    opRel                          shift and go to state 30
    terminal                       shift and go to state 36
    opCar                          shift and go to state 10

state 6

    (37) instruccion -> expresion . TkPuntoYComa
    (76) opAritm -> expresion . TkResta expresion
    (77) opAritm -> expresion . TkSuma expresion
    (78) opAritm -> expresion . TkDiv expresion
    (79) opAritm -> expresion . TkMult expresion
    (80) opAritm -> expresion . TkMod expresion
    (81) opAritm -> expresion . TkPunto expresion
    (104) opRel -> expresion . TkMayor expresion
    (105) opRel -> expresion . TkMenor expresion
    (106) opRel -> expresion . TkMayorIgual expresion
    (107) opRel -> expresion . TkMenorIgual expresion
    (108) opRel -> expresion . TkIgual expresion
    (109) opRel -> expresion . TkDesigual expresion
    (120) opBool -> expresion . TkConjuncion expresion
    (121) opBool -> expresion . TkDisyuncion expresion

    TkPuntoYComa    shift and go to state 49
    TkResta         shift and go to state 46
    TkSuma          shift and go to state 47
    TkDiv           shift and go to state 55
    TkMult          shift and go to state 53
    TkMod           shift and go to state 54
    TkPunto         shift and go to state 57
    TkMayor         shift and go to state 50
    TkMenor         shift and go to state 51
    TkMayorIgual    shift and go to state 58
    TkMenorIgual    shift and go to state 59
    TkIgual         shift and go to state 56
    TkDesigual      shift and go to state 52
    TkConjuncion    shift and go to state 45
    TkDisyuncion    shift and go to state 48


state 7
